# code-inspector

./: .gitignore  LICENSE  README.md  README_EN.md  SKILL.md  pyproject.toml
code_inspector/: __init__.py  cli.py  detectors.py
